Hot Reload working on server start

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Gulp SCSS Workflow</title>
 </head>
-<body>
+<body >
   <h1>Boilerplate</h1>
+  <p>Bohot Hard</p>
+  <img src="./assets/download.jpg">
+  <p>Changes</p>
 </body>
 </html>
